görev deadlineları güncellendi

--- a/angular.json
+++ b/angular.json
@@ -115,6 +115,10 @@
               "devServerTarget": "angular-material-demo:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
